--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Social</title>
+  <title>MyFuckin'Social</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <ul class="nav navbar-left">
+    <li><a href="./." class="navbar-brand">MyFuckin'Social</a></li>
+    </ul>
+    <ul class="nav navbar-right">
+   <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Profil
+<b class="caret"></b>
+    </a>
+   </li>
+    </ul>
+  </nav>
 
+    
+	<div class="container">
 <%= yield %>
-
+</div>
 </body>
 </html>
